# gfx

./: .clang-tidy  .gitignore  CMakeLists.txt  Dependencies.cmake  StyleGuide.md  vcpkg.json
examples/: CMakeLists.txt
examples/Sandbox/: CMakeLists.txt  main.cpp
examples/compute/: CMakeLists.txt  compute.hlsl  main.cpp
examples/hello_triangle/: CMakeLists.txt  main.cpp  triangle.hlsl
examples/model_rendering/: CMakeLists.txt  main.cpp  model.hlsl
examples/render_graph/: CMakeLists.txt  main.cpp  model.hlsl
examples/shader_uniforms/: CMakeLists.txt  main.cpp  triangle.hlsl  uniforms.hlsl
examples/texturing/: CMakeLists.txt  main.cpp  texturing.hlsl
includes/: gfx.hpp  gfx_render_graph.hpp
includes/gfx/: gfx.hpp  gfx_render_graph.hpp
libs/: versions.txt
libs/include/: vk_mem_alloc.h
libs/include/glm/: fwd.hpp  geometric.hpp  integer.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x4.hpp  mat4x3.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
libs/include/glm/detail/: glm.cpp  type_quat.hpp
libs/include/glm/ext/: matrix_clip_space.hpp  matrix_int2x2_sized.hpp  matrix_int2x3_sized.hpp  matrix_int2x4_sized.hpp  matrix_int3x2_sized.hpp  matrix_int3x3_sized.hpp  matrix_int3x4_sized.hpp  matrix_int4x2_sized.hpp  matrix_int4x3_sized.hpp  matrix_int4x4_sized.hpp  matrix_relational.inl  matrix_uint2x2_sized.hpp  matrix_uint2x3_sized.hpp  matrix_uint2x4_sized.hpp  matrix_uint3x2_sized.hpp  matrix_uint3x3_sized.hpp  matrix_uint3x4_sized.hpp  matrix_uint4x2_sized.hpp  matrix_uint4x3_sized.hpp  matrix_uint4x4_sized.hpp  quaternion_common.hpp  quaternion_exponential.hpp  quaternion_geometric.hpp  scalar_relational.inl  scalar_ulp.hpp  scalar_ulp.inl  vector_common.hpp  vector_int1_sized.hpp  vector_int2_sized.hpp  vector_int3_sized.hpp  vector_int4_sized.hpp  vector_uint1_sized.hpp  vector_uint2_sized.hpp  vector_uint3_sized.hpp  vector_uint4_sized.hpp  vector_ulp.hpp
libs/include/glm/gtc/: quaternion.hpp  type_aligned.hpp  type_precision.hpp  type_ptr.hpp
libs/include/glm/gtx/: gradient_paint.hpp  hash.hpp  intersect.hpp  io.hpp  io.inl  matrix_query.hpp  norm.hpp  normalize_dot.hpp  perpendicular.hpp  quaternion.hpp  rotate_vector.hpp  spline.hpp  string_cast.hpp  texture.hpp  transform2.hpp  type_trait.hpp  vector_angle.hpp
src/: CMakeLists.txt  gfx.cpp  gfx_p.hpp  gfx_render_graph.cpp
